# docs/swagger.yaml
@@ -1,4 +1,42 @@
 basePath: /api
+definitions:
+  reqo.PostUser:
+    properties:
+      age:
+        type: integer
+      gender:
+        type: integer
+      interest:
+        type: string
+      passwd:
+        type: string
+      username:
+        type: string
+    type: object
+  reso.HTTPError:
+    properties:
+      code:
+        type: integer
+      data: {}
+      msg:
+        type: string
+    type: object
+  reso.PostLogin:
+    properties:
+      id:
+        type: integer
+      token:
+        type: string
+      username:
+        type: string
+    type: object
+  reso.PostUser:
+    properties:
+      id:
+        type: integer
+      username:
+        type: string
+    type: object
 host: localhost
 info:
   contact:
@@ -12,7 +50,68 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Swagger Example API
   version: "1.0"
-paths: {}
+paths:
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: login by username and password
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/reso.PostLogin'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/reso.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/reso.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/reso.HTTPError'
+      summary: Login 用户登录
+      tags:
+      - User
+  /user:
+    post:
+      consumes:
+      - application/json
+      description: save user
+      parameters:
+      - description: 用户信息
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/reqo.PostUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/reso.PostUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/reso.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/reso.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/reso.HTTPError'
+      summary: Save 用户注册
+      tags:
+      - Save
 securityDefinitions:
   ApiKeyAuth:
     in: header
