# model/reso/error.go
@@ -1,0 +1,7 @@
+package reso
+
+type HTTPError struct {
+	Code int
+	Msg  string
+	Data interface{}
+}
